优化业务逻辑，保险库回复密钥不需要每次输入，增加用户注册支持
